<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SJ_sno2"
    tools:context="com.example.tfk17mhn.frappen.SthActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editTextBroms"
        android:text="@string/bromsprocent"
        android:textColor="@color/SJ_granit"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editTextLength"
        android:text="@string/train_length"
        android:textColor="@color/SJ_granit"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <EditText
        android:id="@+id/editTextBroms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/SJ_sno"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@color/SJ_gran"
        android:textSize="48sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/SJ_sno"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@color/SJ_gran"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonCalc"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:backgroundTint="@color/SJ_gran"
        android:onClick="calculate"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextLength"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <CheckBox
        android:id="@+id/checkBoxEP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EP_broms"
        android:textColor="@color/SJ_granit"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextBroms"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:textColor="@color/SJ_granit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalc" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/SJ_gran"
        android:textSize="48sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextBroms"
        app:layout_constraintRight_toRightOf="@+id/editTextBroms"
        android:layout_marginEnd="2dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter"
        android:textColor="@color/SJ_gran"
        android:textSize="42sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextLength"
        app:layout_constraintRight_toRightOf="@+id/editTextLength"
        android:layout_marginEnd="2dp" />

</android.support.constraint.ConstraintLayout>
