<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SJ_lov2"
    tools:context="com.example.tfk17mhn.frappen.ConversionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:labelFor="@+id/editTextBromsprocent"
        android:text="@string/bromsprocent"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:labelFor="@+id/editTextRet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retardation"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintHorizontal_bias="0.411"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextBromsprocent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLength="3"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextRet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:maxLength="3"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/percent"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintRight_toRightOf="@+id/editTextBromsprocent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextBromsprocent" />

</android.support.constraint.ConstraintLayout>
